# EEGraph

./: .gitignore  CMakeLists.txt  EEGraph-power-curves.R  README.md  run-bfs-energy.sh  run-bfs.sh  run-cc-energy.sh  run-cc.sh  run-energy.sh  run-large-energy.sh  run-large-subgraph.sh  run-large-subway.sh  run-sssp-energy.sh  run-sssp.sh  run-subgraph.sh  run-um-pr.sh  run.sh
Subway/: Makefile  README.md  bfs-async  bfs-sync  cc-async  run-subway-large.sh  run-subway.sh  sssp-async  sssp-sync  sswp-sync
Subway/shared/: Makefile  argument_parsing.cu  argument_parsing.cuh  gpu_kernels.cu  gpu_kernels.cuh  graph.cu  nvmlClass.cuh  partitioner.cuh  subgraph.cu  subgraph.cuh  subgraph_generator.cu  subgraph_generator.cuh  subway_argument_parsing.cu  subway_argument_parsing.cuh  subway_globals.hpp  subway_graph.cu  subway_graph.cuh  subway_runable.cu  subway_runable.cuh  subway_utilities.hpp  timer.hpp
Subway/subway/: Makefile  bfs-async.cu  bfs-sync.cu  cc-async.cu  cc-sync.cu  main.cu  pr-async.cu  pr-sync.cu  sssp-async.cu  sssp-sync.cu  sswp-async.cu  sswp-sync.cu  subway-main.cu
Subway/tools/: Makefile  cc-sync  converter  converter.cpp  pr-async  pr-sync  sswp-async
data/: test.txt
data/async_push_dd/1/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/async_push_dd/2/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/async_push_dd/3/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/async_push_dd/4/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/async_push_dd/5/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/async_push_td/1/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/async_push_td/2/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/async_push_td/3/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/async_push_td/4/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/async_push_td/5/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/sync_push_dd/1/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/sync_push_dd/2/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/sync_push_dd/3/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/sync_push_dd/4/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/sync_push_dd/5/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/sync_push_td/1/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/sync_push_td/2/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/sync_push_td/3/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/sync_push_td/4/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
data/sync_push_td/5/: kron_g500-logn21  road-usa  soc-LiveJournal1  soc-orkut  soc-twitter  twitter-ego
datasets/CTR/: Makefile
datasets/DBpedia/: Makefile
datasets/Full-USA/: Makefile
datasets/Google/: Makefile
datasets/NW/: Makefile
datasets/Orkut/: Makefile
datasets/Road/: Makefile
datasets/Skitter/: Makefile
datasets/Wiki/: Makefile
datasets/Youtube/: Makefile
include/: Makefile  argument_parsing.hpp  bfs.cuh  cc.cuh  cuda_includes.cuh  eegraph.cuh  eegraph_runable.cuh  globals.hpp  gpu_utils.cuh  graph.hpp  managed.cuh  nvmlClass.cuh  pr.cuh  sssp.cuh  sssp_um.cuh  sswp.cuh  um_globals.cuh  um_graph.cuh  um_virtual_graph.cuh  utilities.hpp  virtual_graph.hpp
src/: argument_parsing.cpp  bfs.cu  bfs_main.cu  cc.cu  cc_main.cu  eegraph.cu  eegraph_runable.cu  gpu_utils.cu  graph.cpp  graph_info.cpp  main.cpp  main.cu  main_large.cu  main_subgraph.cu  pr.cu  pr_main.cu  sssp-tigr.cu  sssp.cu  sssp_main.cu  sssp_um.cu  sswp.cu  sswp_main.cu  um_graph.cu  um_virtual_graph.cu  utilities.cpp  virtual_graph.cpp
